kubernetes/prometheus/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.k3s.datallboy.lan.techhaven.io`)
      kind: Rule
      services:
        - name: grafana
          port: 80
  tls:
    secretName: k3s-datallboy-lan-techhaven-io-tls
